# iflytek_kws_test

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  Readme.md  install_libs.sh  rec_and_test.sh
include/: TcpServer.h  cmd_asr_thread.h  iflytek_user.h
libs/: cmd.bnf  iflytek.cfg
libs/msc/3850cab3bbee712e796c90ad55fa91c6/: cfg.ldata
libs/msc/res/asr/GrmBuild/: cmd.g
libs/msc/res/asr/GrmBuild/temp/: cmd_16K
libs/msc/res/tts/: xiaofeng.jet  xiaoyan.jet
src/: TcpServer.cc  cmd_asr_thread.cc  iflytek_user.cc  main.cc
